cluster/spark.openshift.rhdp/user-workloads/spark-etl/spark-application-metrics_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-application-metrics
  namespace: spark-etl-project
  labels:
    spark/servicemonitor: "true"
spec:
  ports:
    - port: 8090
      targetPort: tcp-prometheus
      name: metrics
  clusterIP: None
  selector:
    sparkoperator.k8s.io/launched-by-spark-operator: "true"
